Basic UI elements now working!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_display_stax">display_stax</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_nav_bar">NavBarActivity</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
