Added new categories activity and tied in our 2 activities to the nav bar. I allso added list view objects to each view and tested. We can now switch back and forth between the two activies using the navigation drawer!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_display_stax">display_stax</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_nav_bar">NavBarActivity</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_main2">Flash Stax</string>
+    <string name="title_activity_categories">Categories</string>
 </resources>
