Added Edit Stack activity with a list view. I filled in the list with text strings for testing the click functionality of items in the list. I also added a fake card stack to the card stack screen via a button just to link the activities together for testing. Jon, you can use the code I tied to that button to see how you should launch the edit stack activity from the item list within that activity. Hope you guys are making progress!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="title_activity_nav_bar">NavBarActivity</string>
     <string name="title_activity_main2">Flash Stax</string>
     <string name="title_activity_categories">Categories</string>
+    <string name="title_activity_edit_stack">Edit Stack</string>
+    <string-array name="edit_stack_test">
+        <item>Card 1</item>
+        <item>Card 2</item>
+        <item>Card 3</item>
+    </string-array>
 </resources>
