--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,15 +11,18 @@
     <string name="title_activity_main2">Flash Stax</string>
     <string name="title_activity_categories">Categories</string>
     <string name="title_activity_edit_stack">Edit Stack</string>
-    <string-array name="edit_stack_test">
-        <item>Card 1</item>
-        <item>Card 2</item>
-        <item>Card 3</item>
-    </string-array>
     <string name="title_activity_edit_card">Edit Card</string>
     <string name="front_text_box_prompt_text">Front Text</string>
     <string name="back_text_box_prompt_text">Back Text</string>
     <string name="save_button_text">Save</string>
     <string name="cancel_button_text">Cancel</string>
     <string name="card_name_text">Card Name</string>
+    <string name="stack_name_text">Stack Name</string>
+
+    <string-array name="edit_stack_test">
+        <item>Card 1</item>
+        <item>Card 2</item>
+        <item>Card 3</item>
+    </string-array>
+    <string name="fake_stack_name">Fake Stack</string>
 </resources>
