Clicking an item on the main list now launches the Edit Stack screen Removed back button on the Edit Stack screen in favor of the Cancel button Added Play button to Edit Stack screen (not coded yet)
Next:
Fill in Stack Name and Category text boxes when launching the Edit Stack screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_activity_edit_card">Edit Card</string>
     <string name="front_text_box_prompt_text">Front Text</string>
     <string name="back_text_box_prompt_text">Back Text</string>
+    <string name="play_button_text">Play</string>
     <string name="save_button_text">Save</string>
     <string name="delete_button_text">Delete</string>
     <string name="cancel_button_text">Cancel</string>
